# kinesis-app

./: .ghci  .gitignore  README.md  add-sources.sh  kinesis-app.cabal
src/Kinesis/: App.hs  Coordination.hs  Kinesis.hs  Redis.hs  Types.hs  Utils.hs
test/: Main.hs
test/Kinesis/: CoordinationTests.hs
