name:                kinesis-app
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             AllRightsReserved
license-file:        LICENSE
author:              Ozgun Ataman
maintainer:          ozgun.ataman@soostone.com
copyright:           Soostone Inc
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     
    Kinesis.App
    Kinesis.Types
  other-extensions:    
    FlexibleContexts
    MultiParamTypeClasses
    TemplateHaskell

  build-depends:       
      base >=4.6 && <4.7
    , aws
    , aws-kinesis >=0.1 && <0.2
    , bytestring >=0.10 && <0.11
    , hedis
    , hedis-utils
    , http-client
    , lens
    , mtl
    , time
    , exceptions
    , retry

  hs-source-dirs:      src
  default-language:    Haskell2010
