name:                kinesis-app
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             AllRightsReserved
license-file:        LICENSE
author:              Ozgun Ataman
maintainer:          ozgun.ataman@soostone.com
copyright:           Soostone Inc
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     
    Kinesis.Coordination
    Kinesis.Kinesis
    Kinesis.Redis
    Kinesis.Types
  other-extensions:    
    FlexibleContexts
    MultiParamTypeClasses
    TemplateHaskell

  build-depends:       
      base >=4.6 && <4.7
    , async
    , aws
    , aws-general
    , aws-kinesis >=0.1 && <0.2
    , bytestring >=0.10 && <0.11
    , conduit
    , containers
    , data-default
    , errors
    , exceptions
    , hedis
    , hedis-utils
    , http-client
    , http-conduit
    , lens
    , mmorph
    , mtl
    , resourcet
    , retry
    , text
    , time
    , string-conv
    , aeson
    , monad-control
    , rng-utils

  hs-source-dirs:      src
  default-language:    Haskell2010



test-suite test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  build-depends:
      kinesis-app
    , HUnit
    , QuickCheck
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , tasty-smallcheck
    , derive
    , base
    , bytestring
    , containers
    , smallcheck
  default-language:    Haskell2010

