name:                kinesis-app
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             AllRightsReserved
license-file:        LICENSE
author:              Ozgun Ataman
maintainer:          ozgun.ataman@soostone.com
copyright:           Soostone Inc
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     
    Kinesis.App
    Kinesis.Coordination
    Kinesis.Kinesis
    Kinesis.Types
  other-modules:
    Kinesis.Redis
  other-extensions:    
    FlexibleContexts
    MultiParamTypeClasses
    TemplateHaskell

  build-depends:       
      base >=4.6 && <4.7
    , aeson
    , async
    , auto-update >= 0.1 && < 0.2
    , aws
    , aws-general
    , aws-kinesis >=0.1 && <0.2
    , bytestring >=0.10 && <0.11
    , conduit
    , containers
    , data-default
    , errors
    , exceptions
    , hedis
    , hedis-utils
    , hostname
    , http-client
    , http-conduit
    , http-types
    , lens
    , live-stats >= 0.1 && < 0.2
    , mmorph
    , monad-control
    , mtl
    , resourcet
    , retry
    , rng-utils
    , safe
    , stm
    , string-conv
    , text
    , time

  hs-source-dirs:      src
  default-language:    Haskell2010



test-suite test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  build-depends:
      kinesis-app
    , HUnit
    , QuickCheck
    , base
    , bytestring
    , containers
    , derive
    , smallcheck
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , tasty-smallcheck

  default-language:    Haskell2010

